# TP01_AEDS2

./: CMakeLists.txt  Dicionario.c  Dicionario.h  IndexInverted.c  IndexInverted.h  README.md  WordTad.c  WordTad.h  arquivoManipulate.c  arquivoManipulate.h  main.c  treePatricia.c  treePatricia.h
view/: App.c  App.h  janelabusca.glade  janelaprincipal.glade
view/janelas/: JanelaBusca.c  JanelaBusca.h  JanelaIndiceInvertido.c  JanelaIndiceInvertido.h  JanelaPrincipal.c  JanelaPrincipal.h  JanelaSelecaoPasta.c  JanelaSelecaoPasta.h
